# SSML-demo

./: .gitignore  LICENSE  README.md  context.txt  list_voices.py  pyproject.toml  ssml_demo.py
scripts/: setup_credentials.py
